feat: initialize Express and TypeScript project with user registration functionality
- Added package.json scripts for development, building, and starting the application
- Implemented MongoDB connection in db.ts with error handling
- Created User model with Mongoose schema
- Developed UserController for user registration with validation
- Set up Express server with JSON body parsing and routing
- Configured TypeScript with appropriate settings in tsconfig.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "first project express and typescript",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -14,6 +17,17 @@
   "author": "Alan Alexis Hernandez Francisco",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "bcrypt": "^6.0.0",
+    "colors": "^1.4.0",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.4"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.0.14",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
