Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -23,15 +23,21 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "imagemin": "^9.0.1",
+    "imagemin-webp": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
+    "multer": "^2.0.2",
     "slug": "^11.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/imagemin": "^9.0.1",
+    "@types/imagemin-webp": "^7.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.0.14",
     "@types/slug": "^5.0.9",
     "nodemon": "^3.1.10",
